# powermodelconverter

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/: research_methodology_llm_input.md  validation_report.html  validation_report.json  validation_report.md
scripts/: bootstrap_julia_env.sh  generate_validation_report.py  import_pypsa_eur_to_pandapower.py  pmc-docker.sh  run_pandapower_json_pf_plot.py
src/powermodelconverter/: __init__.py
src/powermodelconverter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/powermodelconverter/adapters/: __init__.py  cgmes_export_adapter.py  cgmes_import_adapter.py  matpower_adapter.py  opendss_adapter.py  opendss_export_adapter.py  pandapower_adapter.py  pandapower_import_adapter.py  pandapower_split_export_adapter.py  powermodels_distribution_adapter.py  powermodels_distribution_import_adapter.py  powersystems_adapter.py  pypower_import_adapter.py  pypsa_adapter.py  pypsa_import_adapter.py  simbench_adapter.py
src/powermodelconverter/cli/: main.py
src/powermodelconverter/core/: __init__.py  capabilities.py  contracts.py  exceptions.py  model.py  pandapower_backend.py  registry.py  route_catalog.py
src/powermodelconverter/exporters/: __init__.py  cgmes.py  matpower.py  opendss.py  pandapower_json.py  pandapower_split.py  powermodels.py  powermodels_distribution.py  pypsa.py  (+2 more)
tests/: test_cgmes.py  test_importers.py  test_package_import.py  test_unbalanced_opendss.py  test_unbalanced_pandapower.py
(+40 files in other folders)
